[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
dotenv = "0.15.0"
futures = "0.3.29"
serde = "1.0.193"
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
log = { version = "0.4.20" }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
hyper = { version = "1.1.0", features = ["full"] }


[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "rust_decimal",
]
